testing changing .formatted to String.format()